RESOLVED FIXED40553
fix chromium compile after r61094 (id attribute refactor)
https://bugs.webkit.org/show_bug.cgi?id=40553
Summary fix chromium compile after r61094 (id attribute refactor)
Tony Chang
Reported 2010-06-13 17:57:06 PDT
fix chromium compile after r61094 (id attribute refactor)
Attachments
Patch (3.24 KB, patch)
2010-06-13 17:57 PDT, Tony Chang
no flags
Tony Chang
Comment 1 2010-06-13 17:57:43 PDT
Tony Chang
Comment 2 2010-06-13 17:58:44 PDT
Tony Chang
Comment 3 2010-06-13 18:10:23 PDT
I think this is correct, but it seems like WebFormControlElement.cpp should have a "hasID()" check.
Note You need to log in before you can comment on or make changes to this bug.