2010-06-13  Tony Chang  <tony@chromium.org>

Build fix, not reviewed.

        fix chromium compile after r61094 (id attribute refactor)
        https://bugs.webkit.org/show_bug.cgi?id=40553

        * bindings/v8/custom/V8NamedNodesCollection.cpp:
        (WebCore::V8NamedNodesCollection::itemWithName):
2010-06-13  Tony Chang  <tony@chromium.org>

        Build fix, not reviewed.

        fix chromium compile after r61094 (id attribute refactor)
        https://bugs.webkit.org/show_bug.cgi?id=40553

        * src/ChromeClientImpl.cpp:
        * src/WebFormControlElement.cpp:
        (WebKit::WebFormControlElement::nameForAutofill):

Canonical link: https://commits.webkit.org/52110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61097 268f45cc-cd09-0410-ab3c-d52691b4dbfc